Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp
@@ -666,6 +666,7 @@ void LineLayout::updateRenderTreePositions(const Vector<LineAdjustment>& lineAdj
 
             renderer.setLocation(Layout::BoxGeometry::borderBoxRect(visualGeometry).topLeft());
             renderer.repaint();
+            continue;
         }
 
         if (layoutBox.isOutOfFlowPositioned()) {
@@ -673,12 +674,19 @@ void LineLayout::updateRenderTreePositions(const Vector<LineAdjustment>& lineAdj
             auto& layer = *renderer.layer();
             auto logicalBorderBoxRect = LayoutRect { Layout::BoxGeometry::borderBoxRect(logicalGeometry) };
 
-            if (layoutBox.style().isOriginalDisplayInlineType())
+            if (layoutBox.style().isOriginalDisplayInlineType()) {
+                auto previousStaticPosition = LayoutPoint { layer.staticInlinePosition(), layer.staticBlockPosition() };
                 blockFlow.setStaticInlinePositionForChild(renderer, logicalBorderBoxRect.y(), logicalBorderBoxRect.x());
+
+                auto delta = logicalBorderBoxRect.location() - previousStaticPosition;
+                // A non-statically positioned out-of-flow box's layout will override the top/left values we are setting here.
+                renderer.move(delta.width(), delta.height());
+            }
 
             layer.setStaticBlockPosition(logicalBorderBoxRect.y());
             layer.setStaticInlinePosition(logicalBorderBoxRect.x());
 
+            // FIXME: Figure out if this is really needed (see webkit.org/b/254666).
             if (layoutBox.style().hasStaticInlinePosition(renderer.isHorizontalWritingMode()))
                 renderer.setChildNeedsLayout(MarkOnlyThis);
             continue;
